noinst_HEADERS = \
	buffer.h \
	command-line.h \
	compiler.h \
	csum.h \
	daemon.h \
	dhcp-client.h \
	dhcp.h \
	dynamic-string.h \
	dpif.h \
	fatal-signal.h \
	fault.h \
	flow.h \
	hash.h \
	learning-switch.h \
	list.h \
	mac-learning.h \
	netdev.h \
	netlink-protocol.h \
	netlink.h \
	ofp-print.h \
	openflow.h \
	openflow-netlink.h \
	packets.h \
	poll-loop.h \
	queue.h \
	random.h \
	rconn.h \
	sat-math.h \
	socket-util.h \
	type-props.h \
	timeval.h \
	stp.h \
	util.h \
	vconn.h \
	vconn-ssl.h \
	vconn-stream.h \
	vlog-socket.h \
	vlog-modules.def \
	vlog.h \
	xtoxll.h
